# codex-tool-dev

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json  pyproject.toml
plugins/turbo-mode/handoff/1.6.0/: CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  TERMS.md  pyproject.toml
plugins/turbo-mode/handoff/1.6.0/.codex-plugin/: plugin.json
plugins/turbo-mode/handoff/1.6.0/references/: ARCHITECTURE.md  handoff-contract.md
plugins/turbo-mode/handoff/1.6.0/scripts/: _bootstrap.py  active_writes.py  cleanup.py  defer.py  distill.py  installed_host_harness.py  list_handoffs.py  load_transactions.py  plugin_siblings.py  project_paths.py  provenance.py  quality_check.py  search.py  session_state.py  storage_authority.py  storage_authority_inventory.py  storage_primitives.py  ticket_parsing.py  triage.py
plugins/turbo-mode/handoff/1.6.0/tests/: test_active_write_lifecycle_matrix.py  test_active_write_status_partition.py  test_active_writes.py  test_architecture_docs.py  test_bootstrap.py  test_chain_state.py  test_cleanup.py  test_cli_commands.py  test_defer.py  test_distill.py  test_handoff_parsing.py  test_installed_host_harness.py  test_list_handoffs.py  test_load_transactions.py  test_plugin_siblings.py  test_project_paths.py  test_provenance.py  test_quality_check.py  test_release_metadata.py  test_runtime_namespace.py  test_search.py  test_session_state.py  test_skill_docs.py  test_storage_authority.py  test_storage_authority_inventory.py  test_storage_inspection.py  test_storage_primitives.py  test_ticket_parsing.py  test_triage.py
(+684 files in other folders)
