[project]
name = "codex-tool-dev"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "tomlkit>=0.12.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
eval = ["jsonschema>=4.0.0"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
